--- a/app/views/task_boards/show.html.erb
+++ b/app/views/task_boards/show.html.erb
@@ -31,6 +31,12 @@
   </style>
 <% end %>
 
+<% content_for :sidebar do %>
+  <h3><%= l(:label_version_plural) %></h3>
+  <% @versions.each do |version| %>
+    <%= link_to format_version_name(version), "#{@baseUri}/task_boards/show/#{@project.id}/#{version.id}" %><br />
+  <% end %>
+<% end %>
 
 <h2><%= @version.name %> Task Board</h2>
 <table id="task_board" cellspacing="0">
